--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <!--Телефон, имейл-->
         <ul class="contacts-head list">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>    
         </ul>   
     </header>
@@ -41,7 +41,7 @@
         
         <section class="section benefits">
             <!--Преимущества компании. Тег h2 нужно будет скрыть-->
-            <h2 class="section-title">Преимущества компании</h2>
+            <h2 class="arisual-hidden">Преимущества компании</h2>
             <ul class="list">
                 <!--Внимание к деталям-->
                 <li>
